organization entitiy, controller, authentication

--- a/config/locales/devise.tr.yml
+++ b/config/locales/devise.tr.yml
@@ -4,6 +4,7 @@ tr:
       not_found: "bulunamadı"
       already_confirmed: "daha önce onaylanmış"
       not_locked: "kilitli değil"
+      not_saved: "%{resource} kaydedilemedi: %{count} hata."
 
   devise:
     failure:
