--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -146,7 +146,9 @@ tr:
         not_saved: "%{resource} kaydedilemedi: %{count} hata."
     models:
       organization: "Kurum"
-      user: "Aktivist"
+      user: "Gönüllü"
+      project: "Bağış Kampanyası"
+      page: "Sayfa"
     attributes:
       organization:
         email: "e-posta"
@@ -163,5 +165,15 @@ tr:
         sign_up: "giriş"
         birthday: "doğum tarihi"
         address: "adres"
+      page:
+        organization_id: "kurum"
+        project_id: "proje"
+        title: "başlık"
+        description: "içerik"
+        start_time: "başlangıç tarihi"
+        end_time: "bitiş tarihi"
+        goal: "hedef(TL)"
+        collected: "toplanan miktar"
   previous: "Önceki"
   next: "Sonraki"
+
