logo for organization, a bunch of x links here and there, language fixes

--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -157,6 +157,7 @@ tr:
         password_confirmation: "şifre (tekrar)"
         sign_up: "giriş"
         address: "adres"
+        name: "isim"
       user:
         email: "e-posta"
         password: "şifre"
