gonulluye fotograf eklendi, ceviriler yapildi

--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -167,6 +167,8 @@ tr:
         sign_up: "giriş"
         birthday: "doğum tarihi"
         address: "adres"
+        name: "ad, soyad"
+        photo: "fotoğraf"
       page:
         organization_id: "kurum"
         project_id: "proje"
