--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -136,7 +136,7 @@ tr:
         taken: "hali hazırda kullanılmakta"
         not_a_number: "geçerli bir sayı değil"
         greater_than: "%{count} sayısından büyük olmalı"
-        greater_than_or_equal_to: "%{count} sayısına eşit veya büyük olmalı"
+        greater_than_or_equal_to: "%{count} veya daha büyük olmalı"
         equal_to: "tam olarak %{count} olmalı"
         less_than: "%{count} sayısından küçük olmalı"
         less_than_or_equal_to: "%{count} sayısına eşit veya küçük olmalı"
